--- a/facility-frontend/package.json
+++ b/facility-frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
+    "buffer": "^6.0.3",
     "classnames": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
@@ -23,6 +25,8 @@
     "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
